zta/microservice5/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zta-microservice5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zta-microservice5
  template:
    metadata:
      labels:
        app: zta-microservice5
    spec:
      containers:
      - name: zta-microservice5
        image: b0rkemborina/zta-cybersec-suite:ztamicroservice5
        ports:
        - containerPort: 8085
