zta/microservice5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zta-microservice5
spec:
  selector:
    app: zta-microservice5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
  type: LoadBalancer # ClusterIP
