zta/microservice5/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /zta/tunnelling
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /zta-microservice5
        pathType: Prefix
        backend:
          service:
            name: zta-microservice5
            port:
              number: 80
