zta/microservice5/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zta-microservice5
spec:
  selector:
    matchLabels:
      app: zta-microservice5
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app1-microservice1",
          "cluster.local/ns/default/sa/app1-microservice2",
          "cluster.local/ns/default/sa/app2-microservice1",
          "cluster.local/ns/default/sa/app2-microservice2",
          "cluster.local/ns/default/sa/app3-microservice1",
          "cluster.local/ns/default/sa/app4-microservice1",
          "cluster.local/ns/default/sa/app4-microservice2",
          "cluster.local/ns/default/sa/app5-microservice1",
          "cluster.local/ns/default/sa/app5-microservice2",
          "cluster.local/ns/default/sa/app5-microservice3",
          "cluster.local/ns/default/sa/app6-microservice1",
          "cluster.local/ns/default/sa/app7-microservice1",
          "cluster.local/ns/default/sa/app8-microservice1",
          "cluster.local/ns/default/sa/app8-microservice2",
        ]
